jy_main, stylelist, styledetail_basic setting finish

--- a/appchu/WebContent/main.html
+++ b/appchu/WebContent/main.html
@@ -5,16 +5,16 @@
 
 <title>Beauty Chu~</title>
 <link rel="stylesheet" type="text/css" href="css/common.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/resources/style.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/button.css">
-<link rel="stylesheet" type="text/css" href="css/input.css">
-<link rel="stylesheet" type="text/css" href="css/icon.css">
+<link rel="stylesheet" type="text/css" href="css/resources/button.css">
+<link rel="stylesheet" type="text/css" href="css/resources/input.css">
+<link rel="stylesheet" type="text/css" href="css/resources/icon.css">
 
-<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-<script src="js/modernizr.custom.63321.js"></script>
-<script src="js/jquery.catslider.js"></script>
-<script src="js/jquery.flexisel.js"></script>
+<script type="text/javascript" src="js/resources/jquery-2.1.1.min.js"></script>
+<script src="js/resources/modernizr.custom.63321.js"></script>
+<script src="js/resources/jquery.catslider.js"></script>
+<script src="js/resources/jquery.flexisel.js"></script>
 </head>
 
 
@@ -82,14 +82,14 @@
 						<ul>
 							<li><a href="#"><img src="images/main/man (5).png"
 									alt="img12">
-									<h4>NAIL</h4></a></li>
+									<h4>CELEBRITY MEN</h4></a></li>
 							<li><a href="#"><img src="images/main/woman (5).png"
 									alt="img13">
-									<h4>ETC</h4></a></li>
+									<h4>CELEBRITY WOMEN</h4></a></li>
 						</ul>
 						<div id=cleardiv></div>
 						<nav>
-							<a href="#">MAN</a> <a href="#">WOMAN</a> <a href="#">ETC</a>
+							<a href="#">MAN</a> <a href="#">WOMAN</a> <a href="#">CELEB</a>
 						</nav>
 					</div>
 				</div>
