--- a/appchu/WebContent/shop-detail.html
+++ b/appchu/WebContent/shop-detail.html
@@ -7,38 +7,27 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/resources/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom CSS -->
-<link href="css/heroic-features.css" rel="stylesheet">
+<link href="css/resources/heroic-features.css" rel="stylesheet">
 
 <!-- 슬라이더 CSS -->
-<link rel="stylesheet" href="css/slider.css">
+<link rel="stylesheet" href="css/resources/slider.css">
 
 <!-- 페이지 넘버 CSS(야후퓨어) -->
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- 댓글 -->
 
-<link rel="stylesheet" href="css/common.css">
-<link rel="stylesheet" href="css/comment.css">
+<link rel="stylesheet" href="css/resources/comment.css">
 
-<title>Shop 상세정보</title>
-<style type="text/css">
 
-.style-list {
-	padding: 10px 15px;
-}
 
-.well-sm {
-	text-align: right;
-}
 
-strong {
-	float: left;
-}
-
-</style>
+<title>SHOP DETAIL</title>
+<link rel="stylesheet" type="text/css" href="common.css">
+<link rel="stylesheet" type="text/css" href="css/shop-detail.css">
 </head>
 
 
@@ -141,7 +130,6 @@ strong {
 
 						</ul>
 					</div>
-				</div>
 				</div>
 				<div class="row">
 					<div class="col-md-3">
@@ -313,12 +301,12 @@ strong {
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="js/resources/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/resources/bootstrap.min.js"></script>
     <!-- 슬라이더 js -->
-	<script src="js/slider.js"></script>
+	<script src="js/resources/slider.js"></script>
 <!-- 	<script language='javascript'>
 		window.setTimeout('window.location.reload()', 5000); //60초마다 새로고침
 	</script> -->
