--- a/appchu/WebContent/shop-list.html
+++ b/appchu/WebContent/shop-list.html
@@ -7,51 +7,20 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/resources/bootstrap.css" rel="stylesheet">
 
 <!-- Custom CSS -->
-<link href="css/heroic-features.css" rel="stylesheet">
+<link href="css/resources/heroic-features.css" rel="stylesheet">
 <!-- 그리드리스트 CSS  -->
-<link href="css/grid.css" rel="stylesheet">
+<link href="css/resources/grid.css" rel="stylesheet">
 <!-- 별점 CSS -->
-<link rel="stylesheet" href="css/starrr.css">
+<link rel="stylesheet" href="css/resources/starrr.css">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
-<title>Shop 리스트</title>
-<link rel="stylesheet" type="text/css" href="css/common.css">
-<link rel="stylesheet" type="text/css" href="css/join.css">
-<style type="text/css">
-.style-list {
-	padding: 10px 15px;
-}
-
-.well-sm {
-	text-align: right;
-}
-
-strong {
-	float: left;
-}
-
-
-/* ---------------------------- */
-
-.container {
-	width: 100%;
-}
-.thumbnail>img {
-	width: 286px;
-	height: 179px;
-}
-
- section {
- border: 1px lightgray solid;
- border-radius: 3px;
- }
-
-</style>
+<title>SHOP LIST GRID</title>
+<!-- <link rel="stylesheet" type="text/css" href="common.css"> -->
+<link rel="stylesheet" type="text/css" href="css/shop-list.css">
 </head>
-
 
 
 <body>
@@ -105,7 +74,7 @@ strong {
                             		 <div class='starrr'></div> 
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="ShopDetail.html">More info</a>
+                            <a class="btn btn-success" href="shop-detail.html">More info</a>
                         </div>
                     </div>
                 </div>
@@ -125,7 +94,7 @@ strong {
                             <div class='starrr'></div> 
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="file:///home/dkdlxl/workspace/test/src/startbootstrap-ShopListGrid/ShopDetail.html">More info</a>
+                            <a class="btn btn-success" href="shop-detail.html">More info</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +114,7 @@ strong {
                             <div class='starrr'></div> 
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="file:///home/dkdlxl/workspace/test/src/startbootstrap-ShopListGrid/ShopDetail.html">More info</a>
+                            <a class="btn btn-success" href="shop-detail.html">More info</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +134,7 @@ strong {
                             <div class='starrr'></div> 
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="file:///home/dkdlxl/workspace/test/src/startbootstrap-ShopListGrid/ShopDetail.html">More info</a>
+                            <a class="btn btn-success" href="shop-detail.html">More info</a>
                         </div>
                     </div>
                 </div>
@@ -185,7 +154,7 @@ strong {
                             <div class='starrr'></div> 
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="file:///home/dkdlxl/workspace/test/src/startbootstrap-ShopListGrid/ShopDetail.html">More info</a>
+                            <a class="btn btn-success" href="shop-detail.html">More info</a>
                         </div>
                     </div>
                 </div>
@@ -205,7 +174,7 @@ strong {
                             <div class='starrr'></div> 
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="file:///home/dkdlxl/workspace/test/src/startbootstrap-ShopListGrid/ShopDetail.html">More info</a>
+                            <a class="btn btn-success" href="shop-detail.html">More info</a>
                         </div>
                     </div>
                 </div>
@@ -228,15 +197,15 @@ strong {
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="js/resources/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/resources/bootstrap.min.js"></script>
     <!-- 그리드 리스트버튼  -->
-    <script src="js/grid.js"></script>
+    <script src="js/resources/grid.js"></script>
     <!-- 별점 -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-    <script src="js/starrr.js"></script>
+    <script src="js/resources/starrr.js"></script>
 
 
 <!-- 	<script language='javascript'>
