--- a/appchu/WebContent/shop-list.html
+++ b/appchu/WebContent/shop-list.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
 <title>SHOP LIST GRID</title>
-<!-- <link rel="stylesheet" type="text/css" href="common.css"> -->
+<link rel="stylesheet" type="text/css" href="css/common.css"> 
 <link rel="stylesheet" type="text/css" href="css/shop-list.css">
 </head>
 
