전체 넓이, 높이 수정

--- a/appchu/WebContent/shop-list.html
+++ b/appchu/WebContent/shop-list.html
@@ -26,24 +26,9 @@
 <body>
 	<div id='wrap'>
 		<header>
-			<nav>
-				<ul>
-					<li><a href='#'>로그인</a></li>
-					<li><a href='#'>회원가입</a></li>
-					<li><a href='#'>문의하기</a></li>
-				</ul>
-			</nav>
-			<div id='clear'></div>
-			<div id='site-title'>Beauty Chu♥</div>
-			<div id='searchbar'>
-				<form>
-					<input id='input-search' placeholder="search" />
-					<button>search</button>
-				</form>
-			</div>
 		</header>
 
-		<div id='menubar'></div>
+		
 
 
 		<section class='style-list'>
@@ -59,7 +44,7 @@
         </div>
     </div>
     <div id="products" class="row list-group">
-        <div class="item  col-xs-4 col-lg-4">
+        <div class="item  col-xs-4 col-lg-4 shop-cell">
             <div class="thumbnail">
                 <img class="group list-group-image" src="images/shop/shop1.jpg" alt="" />
                 <div class="caption">
