--- a/appchu/WebContent/loginjoin.html
+++ b/appchu/WebContent/loginjoin.html
@@ -6,18 +6,20 @@
 <title>LOGIN JOIN PAGE</title>
 <link rel='stylesheet' type='text/css' href='css/common.css'>
 <link rel='stylesheet' type='text/css' href='css/loginjoin.css'>
-<link rel='stylesheet' href='css/bootstrap.min.css'>
-<link rel='stylesheet' href='css/bootstrap-theme.min.css'>
+<link rel='stylesheet' href='css/resources/bootstrap.min.css'>
+<link rel='stylesheet' href='css/resources/bootstrap-theme.min.css'>
 
-<script src="js/modernizr.custom.63321.js"></script>
-<script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/resources/modernizr.custom.63321.js"></script>
+<script src="js/resources/jquery-2.1.1.min.js"></script>
 <!-- <script src="js/jquery-ui.min.js"></script> -->
 <script src="js/bootstrap.min.js"></script>
 
 <script type='text/javascript'
 	src='http://code.jquery.com/jquery-1.7.2.js'></script>
 
-<!-- </head> -->
+</head>
+
+
 <body>
 	<div id='wrap' class='slide-wrap'>
 	
@@ -217,7 +219,7 @@
 
 		</section>
 		</div>
-
+</div>
 		<script type='text/javascript'>
 			$(document).ready(function() {
 				$('.login-content').hide();
@@ -251,7 +253,7 @@
 		</script>
 
 		<header>
-			<nav>
+			<nav id='loginnav'>
 				<ul>
 					<li><a href='#' class='show-login' id='show-login'>로그인</a></li>
 					<li><a href='#' class='show-signup' id='show-signup'>회원가입</a></li>
@@ -277,7 +279,7 @@
 			Yoon Yong Sik, Kang Da Hyun, Kim Ki Hyun, Kim Ji Yeong <br>
 			copyright @AppChu 2015
 		</footer>
-	</div>
+
 
 
 	<script type="text/javascript">
