--- a/appchu/WebContent/shop-list.html
+++ b/appchu/WebContent/shop-list.html
@@ -23,7 +23,7 @@
 
 <link rel="stylesheet" href="css/resources/comment.css">
 
- <link rel="stylesheet" type="text/css" href="common.css"> 
+<link rel="stylesheet" type="text/css" href="css/common.css"> 
 <link rel="stylesheet" type="text/css" href="css/shop-list.css">
 <!-- 슬라이더 CSS -->
 <!-- <link rel="stylesheet" href="css/resources/slider.css"> -->
