--- a/appchu/WebContent/qna.html
+++ b/appchu/WebContent/qna.html
@@ -6,13 +6,13 @@
 <title>문의하기</title>
 <link rel='stylesheet' type='text/css' href='css/common.css'>
 <link rel='stylesheet' type='text/css' href='css/qna.css'>
-<link rel='stylesheet' href='css/bootstrap.min.css'>
-<link rel='stylesheet' href='css/bootstrap-theme.min.css'>
+<link rel='stylesheet' href='css/resources/bootstrap.min.css'>
+<link rel='stylesheet' href='css/resources/bootstrap-theme.min.css'>
 
-<script src="js/modernizr.custom.63321.js"></script>
-<script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/resources/modernizr.custom.63321.js"></script>
+<script src="js/resources/jquery-2.1.1.min.js"></script>
 <!-- <script src="js/jquery-ui.min.js"></script> -->
-<script src="js/bootstrap.min.js"></script>
+<script src="js/resources/bootstrap.min.js"></script>
 
 <script type='text/javascript'
 	src='http://code.jquery.com/jquery-1.7.2.js'></script>
