--- a/beautyChuMobile/src/main/webapp/main.html
+++ b/beautyChuMobile/src/main/webapp/main.html
@@ -12,38 +12,39 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script
 	src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-<script src="js/jquery.wookmark.js"></script>
 
 <style>
-.styleContent {
-	border: 1px solid gray;
-	width: 46%;
-	/* height: 300px; 자유로운 길이 */
-	float: left;
-	margin-top: 2.5%;
-	margin-left: 2.3%;
-	position: relative;
+/* *{
+} */
+#contentdiv {
+	padding: 0px;
 }
 
-.ui-content {
-	padding: 0px;
-	margin-left: 1px;
+.divsection {
+	width: 47%;
+	float: left;
+	margin-left: 2%;
 }
-   
-section#container .block {
-	height: auto;
-	-webkit-transition: all 1s ease-in-out;
-	-moz-transition: all 1s ease-in-out;
-	-o-transition: all 1s ease-in-out;
-	-ms-transition: all 1s ease-in-out;
-	transition: all 1s ease-in-out;
+
+.styleContent {
+	margin-top: 5%;
+	
+	margin-bottom: 2%;
+	border: 1px solid gray;
+}
+
+button{
+	margin: 2%;
+}
+
+.adddiv{
+	height: 500px;
+
 }
 </style>
 
 </head>
 <body>
-
-
 	<div data-role="page" id="page1">
 		<div data-role="header" style="overflow: hidden;">
 			<h1>BeautyChu~♥</h1>
@@ -60,11 +61,15 @@ section#container .block {
 		</div>
 		<!-- /header -->
 
-		<div data-role="content">
-			<div class=styleContent style="height: 300px"></div>
-			<div class=styleContent style="height: 400px"></div>
-			<div class=styleContent style="height: 200px"></div>
-			<div class=styleContent style="height: 500px"></div>
+		<div data-role="content" id=contentdiv>
+			<div id=divsection1 class=divsection>
+				<div class=styleContent id=div1 style="height: 300px"></div>
+			</div>
+			<div id=divsection2 class=divsection>
+				<div class=styleContent id=div5 style="height: 500px"></div>
+			</div>
+			
+			<button id=addbtn>div 추가</button>
 		</div>
 	</div>
 
@@ -97,7 +102,26 @@ section#container .block {
 	</div> -->
 	<!-- /footer -->
 
+
+
+
 	<script>
+		$(function() {
+			console.log($('#divsection1').outerHeight());
+			console.log($('#divsection2').outerHeight());
+		})
+
+		$('#addbtn').on('click',function(){
+			
+			if($('#divsection1').outerHeight()>$('#divsection2').outerHeight()){
+				$('<div>').appendTo('#divsection2').addClass('adddiv styleContent');
+			}else{
+				$('<div>').appendTo('#divsection1').addClass('adddiv styleContent');
+			}
+		
+		})
+		
+		
 		$("#page1").on("swipeleft", function(e) {
 			$.mobile.changePage("#page2", {
 				transition : "none"
